[project]
name = "news-deduplicator-ranking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "bs4>=0.0.2",
    "feedparser>=6.0.12",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "protego>=0.6.0",
    "pydantic>=2.12.5",
    "readability-lxml>=0.8.4.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
]
